Changed variable names for math practice

--- a/js-practice.html
+++ b/js-practice.html
@@ -10,6 +10,8 @@
   <p>Use your Inspector to view your console.</p>
   <script>
     // Your code will go here
+    // Demonstrating variable assignment and working with math.
+    console.log("Let's do Math")
 
     let x = 5;
     console.log(x);
@@ -28,7 +30,17 @@
 
     let d = x / y;
     console.log(d);
-    
+
+  // Working with strings.
+    console.log("Working with strings")
+    let firstName = "Josh";
+    let middleName = "Earl";
+    let lastName = "Whalen";
+
+    let name = firstName + " " + middleName + " " + lastName;
+
+    console.log(name);
+
   </script>
 </body>
 </html>
