Practice with string concatenation.

--- a/js-practice.html
+++ b/js-practice.html
@@ -9,7 +9,6 @@
   <h1>Your JavaScript page</h1>
   <p>Use your Inspector to view your console.</p>
   <script>
-    // Your code will go here
     // Demonstrating variable assignment and working with math.
     console.log("Let's do Math")
 
@@ -22,14 +21,14 @@
     let z = x * y;
     console.log(z)
 
-    let t = x + y;
-    console.log(t);
+    let sums = x + y;
+    console.log(sums);
 
-    let s = x - y;
-    console.log(s);
+    let difference = x - y;
+    console.log(difference);
 
-    let d = x / y;
-    console.log(d);
+    let quotient = x / y;
+    console.log(quotient);
 
   // Working with strings.
     console.log("Working with strings")
@@ -40,6 +39,11 @@
     let name = firstName + " " + middleName + " " + lastName;
 
     console.log(name);
+
+  // Strings on my own.
+    let greeting = 'My name is ' + name
+    console.log(greeting)
+
 
   </script>
 </body>
