Making a webpage using HTML and JS.

--- a/js-practice.html
+++ b/js-practice.html
@@ -89,18 +89,22 @@
 
   // Working with an if else function
     console.log("scoreCompare function");
+    // Checks which team won the game by comparing their scores
     function scoreCompare(home, away) {
       if (home > away) {
         return "Home team wins!";
       } else if (home < away) {
-        return "Away team wins :("
+        return "Away team wins :(";
       } else {
-        return "It was a tie."
+        return "It was a tie.";
       }
     }
+    // testing scoreCompare()
     console.log(scoreCompare(5,3));
     console.log(scoreCompare(3,5));
-    console.log(scoreCompare(2,2))
+    console.log(scoreCompare(2,2));
+
+    
 
 
 
